RESOLVED FIXED30323
Play/pause button in full-screen video controller does not reflect current state
https://bugs.webkit.org/show_bug.cgi?id=30323
Summary Play/pause button in full-screen video controller does not reflect current state
mitz
Reported 2009-10-12 21:33:44 PDT
The play/pause button in the full-screen video controller does not reflect the current playing/paused state of the video. It seems to always come up as a Play button when going into full screen, regardless of whether the video is already playing. When the video reaches its end and stops, the button doesn’t change. Clicking the button always changes it.
Attachments
mitz
Comment 1 2009-10-12 21:36:03 PDT
Eric Carlson
Comment 2 2009-10-22 11:16:32 PDT
Note You need to log in before you can comment on or make changes to this bug.